# tapetools

./: .gitignore  CMakeLists.txt  CMakelists.txt  Readme.md  audio_compute.cpp  audio_draw.cpp  audio_manager.cpp  audio_manager.h  audio_record.cpp  audio_record.h  audio_sine_gen.cpp  audio_sine_gen.h  main.cpp  main_widget.cpp  main_widget.h  sdr_draw.cpp  sdr_thread.h  sg_smooth.cpp  sg_smooth.h  utils.cpp  utils.h  wow_flutter_thread.cpp  wow_flutter_thread.h
cmake/: FindCoreAudio.cmake
libaudio/: CMakeLists.txt
libaudio/include/: audio_generator.h  audio_loopback.h  audio_manager.h  audio_player.h  audio_record.h  audio_recorder.h  audio_sine_gen.h  audio_waveform_gen.h  noise.h  ringbuffer.h  sine_generator.h
libaudio/src/: audio_generator.cpp  audio_loopback.cpp  audio_manager.cpp  audio_player.cpp  audio_record.cpp  audio_recorder.cpp  audio_sine_gen.cpp  audio_waveform_gen.cpp
libdsp/: CMakeLists.txt
libdsp/include/: Biquad.h  Cascade.h  Filter.h  SmoothedFilter.h  State.h
libimgui/: CMakeLists.txt  CMakelists.txt
libimgui/glm/: CMakeLists.txt
libimgui/include/: callback.h  imgui.h  implot.h  implot_internal.h  lcd_display.h  renderbuffer.h  thread.h  timer.h  window_sdl.h
libimgui/src/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  implot.cpp  implot_demo.cpp  implot_items.cpp  renderbuffer.cpp  thread.cpp  timer.cpp  window_sdl.cpp
libsdr/: CMakeLists.txt
libsdr/include/: rtl-sdr.h  rtldev.h  scanner.h
libsdr/src/: librtlsdr.c  rtldev.cpp  scanner.cpp
libsoundio/: CMakeLists.txt
libsoundio/include/: config.h  soundio_internal.h  soundio_private.h
libsoundio/src/: wasapi.c
libutils/: CMakeLists.txt  CmakeLists.txt
libutils/include/: utils.h
libutils/src/: utils.cpp
resources/: CMakeLists.txt  tapetools.rc  win_installer.iss
